--- a/2025-berkeley-seminar-substrate-and-laws/src/slide.html
+++ b/2025-berkeley-seminar-substrate-and-laws/src/slide.html
@@ -10,6 +10,7 @@
             window.TOTAL = {{ total }};
         </script>
         <script src="static/main.js" type="text/javascript"></script>
+        <script src="refresh.js" type="text/javascript"></script>
         <link
             rel="stylesheet"
             href="https://cdn.jsdelivr.net/npm/katex@0.16.22/dist/katex.min.css"
