final version of aria ta1 seminar

--- a/2025-aria-ta1-seminar/src/slide.html
+++ b/2025-aria-ta1-seminar/src/slide.html
@@ -60,6 +60,7 @@
 \gdef\CloseEta{\eta^{\bullet}}
 \gdef\isStatic#1{\mathrm{isStatic}(#1)}
 \gdef\isDynamic#1{\mathrm{isDynamic}(#1)}
+\gdef\ite#1#2#3{\mathbf{if}\:\:#1\:\:\mathbf{then}\:\:#2\:\:\mathbf{else}\:\:#3}
             {% endraw %}
         </span>
         <main class="{{ classes }}">{{ body | safe }}</main>
